@@ -38,6 +38,7 @@ enum ControlIndex {
   TerrainHeight,
   AlternateMode,
   PolarDegradation,
+  AutoBugs,
   SafetyMC,
   RiskFactor,
 };
@@ -94,6 +95,11 @@ SafetyFactorsConfigPanel::Prepare(ContainerWindow &parent, const PixelRect &rc)
            (fixed(1) - settings_computer.polar.degradation_factor) * 100);
   SetExpertRow(PolarDegradation);
 
+  AddBoolean(_("Auto bugs"), /* xgettext:no-c-format */
+           _("If enabled, adds 1% to the bugs setting after each full hour while flying."),
+             settings_computer.polar.auto_bugs);
+  SetExpertRow(AutoBugs);
+
   AddFloat(_("Safety MC"),
            _("The MacCready setting used, when safety MC is enabled for reach calculations, in task abort mode and for determining arrival altitude at airfields."),
            _T("%.1f %s"), _T("%.1f"),
@@ -135,6 +141,11 @@ SafetyFactorsConfigPanel::Save(bool &_changed)
                  settings_computer.polar.degradation_factor);
     if (protected_task_manager != NULL)
       protected_task_manager->SetGlidePolar(settings_computer.polar.glide_polar_task);
+    changed = true;
+  }
+
+  if (SaveValue(AutoBugs, settings_computer.polar.auto_bugs)) {
+    Profile::Set(ProfileKeys::AutoBugs, settings_computer.polar.auto_bugs);
     changed = true;
   }
 
